@@ -53,6 +53,9 @@
    - stevesk@cvs.openbsd.org 2001/05/24 18:57:53                         
      [clientloop.c readconf.c ssh.c ssh.h]                               
      don't perform escape processing when ``EscapeChar none''; ok markus@
+   - markus@cvs.openbsd.org 2001/05/25 14:37:32
+     [ssh-keygen.c]                            
+     use -P for -e and -y, too.                
 
 20010528
  - (tim) [conifgure.in] add setvbuf test needed for sftp-int.c
@@ -5483,4 +5486,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1238 2001/06/05 20:32:21 mouring Exp $
+$Id: ChangeLog,v 1.1239 2001/06/05 20:35:09 mouring Exp $
